--- a/app/src/main/res/layout/activity_fuel_station.xml
+++ b/app/src/main/res/layout/activity_fuel_station.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
     android:background="#ffffff"
-    tools:context="com.DesignQuads.AssistanceFinder.Address">
+    tools:context="com.DesignQuads.AssistanceFinder.Address"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <LinearLayout
-        android:layout_width="600dp"
+        android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="0dp"
@@ -37,13 +42,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight="0.20"
         android:text="@string/PlaceName"
         android:textColor="#001a00"
         android:textSize="18sp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="70dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <EditText
         android:id="@+id/edit_PlaceName"
@@ -74,7 +80,7 @@
 
     <EditText
         android:id="@+id/edit_phone"
-        android:layout_width="wrap_content"
+        android:layout_width="345dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="phone"
@@ -120,10 +126,12 @@
         style="@android:style/Widget.Holo.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="90dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:text="SUBMIT FORM" />
 
 
-</RelativeLayout>
+</LinearLayout>
+</ScrollView>
