--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_screen3" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/bg_screen3">
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/linearLayout">
 
-    <ImageView
-        android:id="@+id/imgLogo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="110dp"
-        android:layout_marginLeft="85dp"
-        android:src="@drawable/newogo" />
-</LinearLayout>
+
+        <ImageView
+            android:id="@+id/imgLogo"
+            android:layout_width="138dp"
+            android:layout_height="133dp"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="100dp"
+            android:src="@drawable/newogo" />
+
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="50dp"
         android:textSize="16dp"
         android:textColor="#454545"
         android:gravity="center_horizontal"
@@ -39,12 +46,16 @@
         android:text="DesignQuads" />
 
     <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView11"
+        android:layout_marginTop="280dp"
+        android:indeterminate="true"
+        android:layout_marginBottom="25dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="15dp" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+
 
 </RelativeLayout>
