--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -55,7 +55,7 @@
             android:layout_marginBottom="1dp"
             android:background="@drawable/customborder"
             android:elevation="0dp"
-            android:text="List View"
+            android:text="List view"
             android:textAllCaps="false"
             android:textColor="#000000"
             android:textSize="26dp"
