--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -6,14 +6,26 @@
     android:padding="10dp"
     >
 
+    <ImageView
+        android:id="@+id/item_call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+
+        android:src="@drawable/ic_store_black_24dp"
+         />
+
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:text="Name"
+        android:layout_marginLeft="40dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:textStyle="normal"
+        android:textSize="18sp"/>
 
 
     <TextView
@@ -23,27 +35,10 @@
         android:layout_below="@+id/name"
         android:layout_marginTop="5dp"
         android:text="Phone"
+        android:layout_marginLeft="40dp"
         android:textColor="@android:color/black" />
 
-    <ImageView
-        android:id="@+id/item_call"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:src="@android:drawable/sym_call_outgoing" />
 
-    <ImageView
-        android:id="@+id/item_dir"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_directions"
-        android:layout_alignTop="@+id/item_call"
-        android:layout_toLeftOf="@+id/item_call"
-        android:layout_toStartOf="@+id/item_call"
-        android:layout_marginRight="14dp"
-        android:layout_marginEnd="14dp" />
 
 
 
