--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -39,4 +39,10 @@
         </menu>
     </item>
 
+            <item
+                android:id="@+id/nav_about_us"
+                android:title="About us"
+                android:icon="@drawable/ic_login1"/>
+
+
 </menu>
