--- a/app/src/debug/res/layout/activity_opening_hrs__dialog.xml
+++ b/app/src/debug/res/layout/activity_opening_hrs__dialog.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
@@ -29,22 +32,22 @@
         />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
 
-    <EditText
-        android:id="@+id/WDamOpening"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Opening Time"
-        android:inputType="time" />
+        <EditText
+            android:id="@+id/WDamOpening"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Opening Time"
+            android:inputType="time" />
 
         <Spinner
             android:id="@+id/spinner1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:entries="@array/am_pm" />
 
@@ -57,7 +60,7 @@
 
     <EditText
         android:id="@+id/WDpmClosing"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Closing Time"
@@ -100,7 +103,7 @@
 
         <EditText
             android:id="@+id/WEamOpening"
-            android:layout_width="wrap_content"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Opening Time"
@@ -121,7 +124,7 @@
 
         <EditText
             android:id="@+id/WEpmClosing"
-            android:layout_width="wrap_content"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Closing Time"
@@ -141,8 +144,9 @@
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimary"
         android:text="@string/Ok"
         android:textColor="@android:color/white" />
 
 </LinearLayout>
+</ScrollView>
