--- a/app/src/main/res/layout/activity_hospital.xml
+++ b/app/src/main/res/layout/activity_hospital.xml
@@ -1,49 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
     android:background="#ffffff"
-    tools:context="com.DesignQuads.AssistanceFinder.HospitalAddress">
+    tools:context="com.DesignQuads.AssistanceFinder.HospitalAddress"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="600dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="0dp"
 
-        android:orientation="vertical"
-        android:background="#80aaff">
+        android:background="#ffffff"
+        android:orientation="vertical">
 
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:text="@string/Form"
-            android:textColor="#ffffff"
             android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="2dp"
+            android:text="@string/Form"
+            android:textColor="#00264d"
             android:textSize="24sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/HospitalName"
-        android:textColor="#001a00"
-        android:textSize="18sp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="70dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+
 
     <EditText
         android:id="@+id/edit_PlaceName"
@@ -53,7 +44,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
         android:ems="10"
-        android:hint=""
+        android:hint="@string/HospitalName"
         android:inputType="textPersonName"
         android:layout_marginBottom="5dp"
         tools:layout_editor_absoluteX="8dp"
@@ -61,22 +52,13 @@
 
 
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/PhoneNumber"
-        android:textColor="#001a00"
-        android:textSize="18sp"
-        android:layout_below="@+id/edit_PlaceName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/edit_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="@string/PhoneNumber"
         android:inputType="phone"
         android:layout_below="@+id/textView9"
         android:layout_alignParentLeft="true"
@@ -119,10 +101,12 @@
         style="@android:style/Widget.Holo.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:text="SUBMIT FORM" />
 
 
-</RelativeLayout>
+</LinearLayout>
+</ScrollView>
