--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,13 +21,13 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="260dp"
             android:layout_weight="1.5"
             android:background="@android:color/holo_blue_light"/>
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="160dp"
             android:layout_weight="1"
             android:background="@android:color/white"/>
     </LinearLayout>
@@ -33,28 +36,30 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_above="@+id/loginLayout"
-        android:layout_marginBottom="60dp">
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="60dp"
+        android:weightSum="1">
 
         <TextView
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
+            android:layout_marginLeft="140dp"
             android:layout_marginRight="0dp"
-            android:layout_marginStart="100dp"
-            android:layout_weight="1"
+            android:layout_weight="0.07"
             android:fontFamily="cursive"
             android:lineSpacingExtra="0sp"
+            android:layout_marginTop="0dp"
 
             android:text="User"
             android:textColor="@android:color/white"
             android:textSize="20dp" />
         <TextView
-            android:layout_width="160dp"
+            android:layout_width="88dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginLeft="0dp"
-            android:layout_marginRight="100dp"
+            android:layout_marginRight="0dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="0dp"
             android:text="Login"
             android:textColor="@android:color/white"
             android:textSize="30dp"/>
@@ -63,7 +68,7 @@
         android:layout_width="300dp"
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="120dp"
         android:background="@drawable/login"
         android:orientation="vertical"
         android:id="@+id/loginLayout"
@@ -121,22 +126,24 @@
             android:text="login"
             android:textColor="@android:color/white"/>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/facebook"
         android:layout_width="200dp"
         android:layout_height="80dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="0dp"
+        android:layout_below="@+id/loginLayout"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/loginLayout">
+        android:layout_marginTop="0dp"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/btn_SignUp"
             android:layout_width="0dp"
             android:layout_height="60dp"
-            android:text="Sign-up"
-            android:textColor="@android:color/white"
+            android:layout_weight="1"
             android:background="@drawable/facebook"
-            android:layout_weight="1"/>
+            android:text="Sign-up"
+            android:textColor="@android:color/white" />
     </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
@@ -145,3 +152,4 @@
         android:layout_centerHorizontal="true"
         android:text="Forgot Password?"/>
 </RelativeLayout>
+</ScrollView>
