--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -57,6 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:gravity="center"
         >
     <Button
         android:id="@+id/tag_btn"
@@ -76,6 +80,7 @@
     <Button
         android:id="@+id/editTag_btn"
         style="@style/Widget.AppCompat.Button.Colored"
+        android:gravity="center"
         android:layout_width="320dp"
         android:layout_height="70dp"
         android:layout_alignEnd="@+id/tag_btn"
@@ -92,6 +97,7 @@
     <Button
         android:id="@+id/unTag_btn"
         style="@style/Widget.AppCompat.Button.Colored"
+        android:gravity="center"
         android:layout_width="320dp"
         android:layout_height="70dp"
         android:layout_alignEnd="@+id/editTag_btn"
@@ -107,21 +113,24 @@
         android:textSize="24sp" />
 
 
-    <Button
-        android:id="@+id/logOut_btn"
-        style="@android:style/Widget.Button"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:elevation="0dp"
-        android:fontFamily="sans-serif"
-        android:text="Log out"
-        android:textSize="18sp"
-        android:layout_marginBottom="100dp"
-        android:layout_marginTop="457dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginLeft="120dp"
-         />
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_marginTop="460dp"
+         android:gravity="center">
+     <Button
+         android:id="@+id/logOut_btn"
+         android:layout_width="160dp"
 
+         android:layout_height="wrap_content"
+         android:layout_marginBottom="10dp"
+         android:layout_marginTop="10dp"
+         android:background="@color/colorPrimary"
+         android:textColor="@android:color/white"
+         android:text="Log out"
+         android:layout_below="@+id/unTag_btn"
+         android:layout_centerHorizontal="true" />
+     </LinearLayout>
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
@@ -137,3 +146,4 @@
     </RelativeLayout>
 
 </RelativeLayout>
+</ScrollView>
