--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -101,23 +104,29 @@
         android:ems="10"
         android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/btn_register"
-        android:layout_width="180dp"
-        android:layout_height="60dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/edit_password"
-        android:layout_marginLeft="66dp"
-        android:layout_marginStart="66dp"
-        android:background="@android:color/holo_green_dark"
-        android:backgroundTint="#2eb82e"
-        android:fontFamily="sans-serif"
-        android:text="@string/REGISTRATION"
-        android:textColor="#ffffff"
-        android:textSize="18sp"
-        android:typeface="normal" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="140dp"
+        android:layout_marginTop="300dp"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="180dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="340dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="380dp"
+            android:background="@android:color/holo_green_dark"
+            android:backgroundTint="#2eb82e"
+            android:fontFamily="sans-serif"
+            android:text="@string/REGISTRATION"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
+            android:typeface="normal"
+            android:layout_gravity="center"/>
+    </LinearLayout>
 
 </RelativeLayout>
 
-
+</ScrollView>
