--- a/app/src/main/res/layout/activity_road_side.xml
+++ b/app/src/main/res/layout/activity_road_side.xml
@@ -1,40 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
     android:background="#ffffff"
-    tools:context="com.DesignQuads.AssistanceFinder.RoadSideAddress">
+    tools:context="com.DesignQuads.AssistanceFinder.RoadSideAddress"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="600dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="0dp"
 
-        android:orientation="vertical"
-        android:background="#80aaff">
+        android:background="#ffffff"
+        android:orientation="vertical">
 
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:text="@string/Form"
-            android:textColor="#ffffff"
             android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="2dp"
+            android:text="@string/Form"
+            android:textColor="#00264d"
             android:textSize="24sp" />
     </LinearLayout>
 
 
-
     <EditText
         android:id="@+id/edit_PlaceName"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -42,27 +45,25 @@
         android:ems="10"
         android:hint="@string/roadsideServiceName"
         android:inputType="textPersonName"
-        android:textColor="#001a00"
-        android:layout_marginTop="90dp"
+        android:layout_marginBottom="5dp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="0dp" />
 
 
 
 
+
     <EditText
         android:id="@+id/edit_phone"
-        android:layout_width="300dp"
+        android:layout_width="345dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/PhoneNumber"
-        android:textColor="#001a00"
         android:inputType="phone"
         android:layout_below="@+id/textView9"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="140dp"
-        android:layout_marginBottom="0dp"/>
+        android:layout_marginTop="11dp" />
 
 
     <Button
@@ -70,11 +71,10 @@
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_above="@+id/OpeningHrs_btn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="0dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/common_full_open_on_phone"
         android:elevation="0dp"
         android:text="@string/address"
@@ -86,43 +86,47 @@
         android:id="@+id/OpeningHrs_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/Submit_btn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="230dp"
+        android:layout_marginBottom="21dp"
         android:textSize="18sp"
         android:background="@drawable/common_full_open_on_phone"
         android:text="Opening Hours"
         android:textStyle="normal"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
-
-
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="290dp">
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="0dp">
 
 
 
-           <Spinner
-               android:id="@+id/Road_spinner"
-               android:layout_width="match_parent"
-               android:layout_height="50dp"
-               android:entries="@array/services"
-               />
+        <Spinner
+            android:id="@+id/Road_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:entries="@array/services"
+            />
 
-        </LinearLayout>
+    </LinearLayout>
 
     <Button
         android:id="@+id/Submit_btn"
         style="@android:style/Widget.Holo.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="0dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:text="SUBMIT FORM" />
 
 
-</RelativeLayout>
+
+
+</LinearLayout>
+</ScrollView>
