--- a/app/src/main/res/layout/activity_service_station.xml
+++ b/app/src/main/res/layout/activity_service_station.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,24 +12,24 @@
     tools:context="com.DesignQuads.AssistanceFinder.ServiceAddress">
 
     <LinearLayout
-        android:layout_width="600dp"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="0dp"
 
-        android:orientation="vertical"
-        android:background="#80aaff">
+        android:background="#ffffff"
+        android:orientation="vertical">
 
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:text="@string/Form"
-            android:textColor="#ffffff"
             android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="2dp"
+            android:text="@string/Form"
+            android:textColor="#00264d"
             android:textSize="24sp" />
     </LinearLayout>
 
@@ -112,10 +115,13 @@
         style="@android:style/Widget.Holo.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="0dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="400dp"
         android:text="SUBMIT FORM" />
 
 
 </RelativeLayout>
+</ScrollView>
